--- a/HtA MP/localisation/HTA_countries.csv
+++ b/HtA MP/localisation/HTA_countries.csv
@@ -768,5 +768,5 @@ NEU_conservative;Alright Party;;;;;;;;;;;;x
 NEU_reactionary;Fuck Reforms;;;;;;;;;;;;x
 NEU_anarcho_liberal;Just Why;;;;;;;;;;;;x
 NEU_socialist;The Left Party;;;;;;;;;;;;x
-NEU_communist;The Northeastern Peoples' Party;;;;;;;;;;;;x
+NEU_communist;The Northeastern Peoples' Party
 NEU_fascist;Fuck Everyone but Us;;;;;;;;;;;;x
