--- a/HtA MP/localisation/HTA_events.csv
+++ b/HtA MP/localisation/HTA_events.csv
@@ -877,3 +877,5 @@ EVT97107OPTB;We shall not bend to the demands of these kafirs.;x
 EVTNAME97109;Persian Gulf Negotiations;x
 EVTDESC97109;Diplomats from the European powers that participated in the Persian Expedition now sit down to negotiate the thorny question of the Persian Gulf. All want a piece of the strategic pie, and it appears negotiations will draw out in a quaint villa of newly-reconqured Jerusalem.\n\nIf you haven't already, choose a port to take, and only then hit OK.;x
 EVT97109OPTA;Vultures circle over Persia;x
+EVTNAME69690;We have conquered Korea!;x
+EVTDESC69690;As we have conquered Korea, we must make these new "people" into proper japanese citizens!;x
