--- a/Demo's HtA MP/localisation/HTA_decisions.csv
+++ b/Demo's HtA MP/localisation/HTA_decisions.csv
@@ -567,3 +567,43 @@ ZAC_inherits_LUZ_title;The Destiny of Luzica;x
 ZAC_inherits_LUZ_desc;Beyond the Odra river lies Luzica, the homeland of the Sorbs, the last remnant of the Slavs that once inhabited all the region from Silesia to Denmark. They have been increasingly marginalized while living in German states, and it is time for us to change that. And we are in a position to do so. Let us welcome them into Zachadia!;x
 ZAC_inherits_RUT_title;Our Brothers, the Ruthenians;x
 ZAC_inherits_RUT_desc;Though their language may not be quite as close to ours as that of the Silesians or Sorbs, the peoples of Zachadia have had much historical contact with the Ruthenians, which has been to the profit of all our peoples. Now that we find ourselves in a position to exert our influence in the region, we should consider incorporating the rich Ruthenian lands into our great nation. Let all share in its bounty!;x
+fuck_condor_title;Fuck Condor (Also you get accepted cultures or smth whatever.;;;;;;;;;;x
+fuck_condor_desc;He made me do a last minute mod change and then the game didn't even happen lmao.;;;;;;;;;;x
+form_finland_baltica_title;Unite Finland and our baltic lands!
+form_finland_baltica_desc;With the threat of a scandinavia uniting we must give up on assimilating the baltics in favor of integrating them as our own people.;;;;;;;;;;x
+integrate_the_sorbs__prusai_and_silesians_title;Integrate the Sorbs, Prusai, and Silesians.;;;;;;;;;;x
+integrate_the_sorbs__prusai_and_silesians_desc;We must expand the newly born German Empire east and steal the resource rich area of silesia from the dirty west slavs.;;;;;;;;;;x
+claim_the_med_islands_title;Claim the Mediterranean Islands
+claim_the_med_islands_desc;With our newly conquered islands in the Mediterranean we must naturally come up with some fake bullshit to justify our conquest and make the population at least semi-content with our rule.;;;;;;;;;;x
+annex_ginnaecer_title;Conquer Ginnaecer
+annex_ginnaecer_desc;With the current threats from the south and east we have decided it best for Ginnaecer if they were to join our great union, whether they want to or not.;;;;;;;;;;x
+annex_margaria_title;Conquer Margaria
+annex_margaria_desc;With the current threats from the south and east we have decided it best for Margaria if they were to join our great union, whether they want to or not.;;;;;;;;;;x
+annex_skamisc_title;Conquer Skamisc
+annex_skamisc_desc;With the current threats from the south and east we have decided it best for Skamisc if they were to join our great union, whether they want to or not.;;;;;;;;;;x
+invade_the_mexicans_SCW_title;Conquer the southern menace!;;;;;;;;;;x
+invade_the_mexicans_SCW_title;We must kill the southern menace once and for all!;;;;;;;;;;x
+form_the_northeastern_union_title;Form the Great Northeastern Union!;;;;;;;;;;x
+form_the_northeastern_union_desc;I have no clue what to name this, the cultures have no overlap and I'm not going to name is something like Arcadia fuck you.;;;;;;;;;;x
+annex_quebec_title;Conquer Dabimon!;;;;;;;;;;x
+annex_quebec_desc;This is LITERALLY quebec and you can't tell me otherwise.;;;;;;;;;;x
+annex_new_holland_title;Conquer New Holland!;;;;;;;;;;x
+annex_new_holland_desc;How the hell do you spell the culture of this nation lmaoooo.;;;;;;;;;;x
+annex_vestland_title;Conquer Vestland!
+annex_vestland_desc;This is the basic bitch nation, kill it!;;;;;;;;;;x
+invade_the_southern_europeans_title;Conquer Mellomamerika!
+invade_the_southern_europeans_desc;We must steal their literacy, as we have none ourselves.;;;;;;;;;;x
+integrate_the_southern_europeans_title;Integrate the Southern Europeans.;;;;;;;;;;x
+integrate_the_southern_europeans_desc;To advance our global position we must sadly treat the southern euros as actual people for once.;;;;;;;;;;x
+invade_the_north_mex_title;Invade Scyargayar Woning!;;;;;;;;;;x
+invade_the_north_mex_desc;We must invade the unpronouncable nation!;;;;;;;;;;x
+integrate_the_north_mex_title;Integrate the northern people!;;;;;;;;;;x
+integrate_the_north_mex_desc;To advance our global position we mush sadly treat the northern "people" like actual people.;;;;;;;;;;x
+invade_the_north_title;Invade Mexico!;;;;;;;;;;x
+invade_the_north_desc;We must stop the northern menace before they come for us!;;;;;;;;;;x
+integrate_the_mexicans_title;Integrate the Mexicans.;;;;;;;;;;x
+integrate_the_mexicans_desc;To advance our global position we must accept our old enemies as people.;;;;;;;;;;x
+dissolve_the_loncan_republic_title;Dissolve the old Loncan Republic!;;;;;;;;;;x
+dissolve_the_loncan_republic_desc;We must dissolve the old Loncan Republic so their people will become ours.;;;;;;;;;;x
+integrate_our_minorities_title;Integrate our minorities.;;;;;;;;;;x
+integrate_our_minorities_desc;We must unite our nation by giving our minorities equal rights to the Uilsc people!;;;;;;;;;;x
