--- a/Demo's HtA MP 4.3/localisation/HTA_events.csv
+++ b/Demo's HtA MP 4.3/localisation/HTA_events.csv
@@ -879,3 +879,5 @@ EVTDESC97109;Diplomats from the European powers that participated in the Persian
 EVT97109OPTA;Vultures circle over Persia;x
 EVTNAME69690;We have conquered Korea!;x
 EVTDESC69690;As we have conquered Korea, we must make these new "people" into proper japanese citizens!;x
+EVTNAME53020;Do we attack the qin empire?;x
+EVTDESC53020;Thank you the Minediamonds for pointing this out to me btw;x
