--- a/Changelog.txt
+++ b/Changelog.txt
@@ -5,4 +5,5 @@ Buffed diplo points in general
 nerfed Cenas to a 3 3
 changed Roman Southern Italian Cores (they need to own southern italy to get cores on it)
 got rid of many native cultures
+removing from sphere no longer gives infamy and makes you lose prestige
 ------------------------------------------
