--- a/Changelog.txt
+++ b/Changelog.txt
@@ -6,4 +6,7 @@ nerfed Cenas to a 3 3
 changed Roman Southern Italian Cores (they need to own southern italy to get cores on it)
 got rid of many native cultures
 removing from sphere no longer gives infamy and makes you lose prestige
+changed how netherlands gets picard and wallonian (also gave them south african cultures accepted)
+consolidated the igor import cbs (no more getting fucked because it got to 1870 mid justification)
+both armenia and rome get baby boom if either wins
 ------------------------------------------
