--- a/Changelog.txt
+++ b/Changelog.txt
@@ -9,4 +9,5 @@ removing from sphere no longer gives infamy and makes you lose prestige
 changed how netherlands gets picard and wallonian (also gave them south african cultures accepted)
 consolidated the igor import cbs (no more getting fucked because it got to 1870 mid justification)
 both armenia and rome get baby boom if either wins
+balanced plurality
 ------------------------------------------
