moar things yay!!!!!

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -10,4 +10,7 @@ changed how netherlands gets picard and wallonian (also gave them south african 
 consolidated the igor import cbs (no more getting fucked because it got to 1870 mid justification)
 both armenia and rome get baby boom if either wins
 balanced plurality
+consolidated middle eastern states (most of core persian states are decent pop, arabian peninsula is one 600k pop state)
+gave aquitania, rome, and armenia special generals to allow for more skilled wars (will probably add generals for italians, spanish, and dutch as well)
+also got rid of those weird colored thingies on the map (other map mods should still override and probably also get rid of them too)
 ------------------------------------------
