--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,7 +1,7 @@
 4.5
 gave india and china more techs to help 1836 eco (suryavamsi's artisans should now make mil goods, also they will make more raw goods day 1)
 Berne treaty different (gonna see if it works)
-Buffed diplo points in general
+Buffed diplo points in general (BY A LOT)
 nerfed Cenas to a 3 3
 changed Roman Southern Italian Cores (they need to own southern italy to get cores on it)
 got rid of many native cultures
@@ -13,4 +13,6 @@ balanced plurality
 consolidated middle eastern states (most of core persian states are decent pop, arabian peninsula is one 600k pop state)
 gave aquitania, rome, and armenia special generals to allow for more skilled wars (will probably add generals for italians, spanish, and dutch as well)
 also got rid of those weird colored thingies on the map (other map mods should still override and probably also get rid of them too)
+made clergy cheaper to pay for
+changed italian decision to remove cores (can also remove PDN cores if they don't exist
 ------------------------------------------
