--- a/Changelog.txt
+++ b/Changelog.txt
@@ -15,4 +15,5 @@ gave aquitania, rome, and armenia special generals to allow for more skilled war
 also got rid of those weird colored thingies on the map (other map mods should still override and probably also get rid of them too)
 made clergy cheaper to pay for
 changed italian decision to remove cores (can also remove PDN cores if they don't exist
+increased dutch starting non-accepted lit
 ------------------------------------------
