--- a/Changelog.txt
+++ b/Changelog.txt
@@ -16,4 +16,5 @@ also got rid of those weird colored thingies on the map (other map mods should s
 made clergy cheaper to pay for
 changed italian decision to remove cores (can also remove PDN cores if they don't exist
 increased dutch starting non-accepted lit
+changed oobs
 ------------------------------------------
