--- a/Changelog.txt
+++ b/Changelog.txt
@@ -17,4 +17,5 @@ made clergy cheaper to pay for
 changed italian decision to remove cores (can also remove PDN cores if they don't exist
 increased dutch starting non-accepted lit
 changed oobs
+consolidated a TON of cultures
 ------------------------------------------
