--- a/Changelog.txt
+++ b/Changelog.txt
@@ -18,4 +18,5 @@ changed italian decision to remove cores (can also remove PDN cores if they don'
 increased dutch starting non-accepted lit
 changed oobs
 consolidated a TON of cultures
+BUFFED IRAN A SHIT TON
 ------------------------------------------
