--- a/Changelog.txt
+++ b/Changelog.txt
@@ -19,4 +19,5 @@ increased dutch starting non-accepted lit
 changed oobs
 consolidated a TON of cultures
 BUFFED IRAN A SHIT TON
+Hispania now owns all of bengal directly
 ------------------------------------------
