--- a/Changelog.txt
+++ b/Changelog.txt
@@ -22,4 +22,6 @@ BUFFED IRAN A SHIT TON
 Hispania now owns all of bengal directly
 pretty much universal industry buff (around 200k more craftsmen worldwide)
 made german LR universal 38
+made japan's tech match their reforms
+gave rome another starting OOB to make up for persia buff
 ------------------------------------------
