--- a/Changelog.txt
+++ b/Changelog.txt
@@ -24,4 +24,5 @@ pretty much universal industry buff (around 200k more craftsmen worldwide)
 made german LR universal 38
 made japan's tech match their reforms
 gave rome another starting OOB to make up for persia buff
+consolidated some scandi states
 ------------------------------------------
