--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,3 +1,9 @@
+4.6
+Tripled Skamisc's pop, and gave both them and mexika appropiate OOBS
+No more pandemics
+did some other stuff probably idr
+
+--------------------------------------------------------------------------------------
 4.5 THANKS TO ALL WHO REPORTED BUGS AND GENERALLY HELPED OUT WITH DECISION MAKING
 gave india and china more techs to help 1836 eco (suryavamsi's artisans should now make mil goods, also they will make more raw goods day 1)
 Berne treaty different (gonna see if it works)
