fixed what was crashing the game

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,7 +1,15 @@
 4.6
 Tripled Skamisc's pop, and gave both them and mexika appropiate OOBS
 No more pandemics
-did some other stuff probably idr
+made it so Hispania can actually get the italian islands accepted and cored (was broken before)
+Removed the year requirement from Mexika's expansion decisions but gave them an infamy penalty
+gave skamisc a load of previously uncolonized land (makes them look SO much better, also a minor buff)
+Moved Skamisc's craftsmen to their capital
+Converted the Shawnee diaspora in Mexika and Hoyekistan
+Made Hispania able to get cores and accepted many years earlier than previously
+Gave the Netherlands Boer accepted
+Made prestige more equal
+Fixed some low plurality nations to be on par with the rest of the world
 
 --------------------------------------------------------------------------------------
 4.5 THANKS TO ALL WHO REPORTED BUGS AND GENERALLY HELPED OUT WITH DECISION MAKING
