--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,5 +1,5 @@
 4.6
-Tripled Skamisc's pop, and gave both them and mexika appropiate OOBS
+Tripled Skamisc's pop, and gave both them and mexika more appropiate OOBS
 No more pandemics
 made it so Hispania can actually get the italian islands accepted and cored (was broken before)
 Removed the year requirement from Mexika's expansion decisions but gave them an infamy penalty
@@ -8,8 +8,20 @@ Moved Skamisc's craftsmen to their capital
 Converted the Shawnee diaspora in Mexika and Hoyekistan
 Made Hispania able to get cores and accepted many years earlier than previously
 Gave the Netherlands Boer accepted
-Made prestige more equal
+Made prestige more equal day 1
+Made it so Russia and Smolensk start at war day one and have truces with all their player neighbors (and their neighbors, they have no truces with Persia and all west of Bohemia)
 Fixed some low plurality nations to be on par with the rest of the world
+made the scyargayar woning core decisions cost 15 infamy instead of 10 so it is more expensive for SKM to take it
+Pop buffed Hispania to 4 mil accepted (might be a bit much but would like they are still weaker than aqui day one and have other things to do)
+made bureaucrats cheaper to maintain (you're welcome)
+buffed armenia oob to balance it out more (in case there is no persia player or persia wants them dead)
+gave armenia the LITERAL worst army tech above Rome
+gave argentina and uiscyr more fitting oobs (still largely under their forcelimit as to not have too much starting sieging power)
+gave scyargayar woning, melloamerika, and mexika all the same accepted pops (through decision)
+Gave hoyekistan/melloamerika afro-antillean accepted (same way as uiscyr) and made the land actually decent
+buffed amount of afro-americans in shawnee (now 10% of its pop)
+Got rid of one of Qin's techs that they had previously 
+Gave more generals to nations around the world
 
 --------------------------------------------------------------------------------------
 4.5 THANKS TO ALL WHO REPORTED BUGS AND GENERALLY HELPED OUT WITH DECISION MAKING
