why no discord kevin

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -22,6 +22,7 @@ Gave hoyekistan/melloamerika afro-antillean accepted (same way as uiscyr) and ma
 buffed amount of afro-americans in shawnee (now 10% of its pop)
 Got rid of one of Qin's techs that they had previously 
 Gave more generals to nations around the world
+Added province selector and added national ideas
 
 --------------------------------------------------------------------------------------
 4.5 THANKS TO ALL WHO REPORTED BUGS AND GENERALLY HELPED OUT WITH DECISION MAKING
