--- a/SlayTA 4.6/localisation/HTA_cultures.csv
+++ b/SlayTA 4.6/localisation/HTA_cultures.csv
@@ -21,7 +21,7 @@ cymry;Cymry;;;;;;;;;;;;;x
 far_east_asian;Far East Asian;;;;;;;;;;;;;x
 filipino;Panajaner;;;;;;;;;;;x
 finnic;Finnic;;;;;;;;;;;;;x
-french_canadian;Dabimonais;;;;;;;;;;;;;x
+french_canadian;Leifslander;;;;;;;;;;;;;x
 gallo_romance;Gallo-Romance;;;;;;;;;x
 galician;Galician;;;;;;;;;;;;x
 gaoshan;Gaoshan;;;;;;;;;x
@@ -42,7 +42,7 @@ meikan;Meikan;;;;;;;;;;;;;x
 mellomsk;Mellomsk;;;;;;;;;;;;;x
 miskito;Misikito;;;;;;;;;;;;;x
 mon;Mon;;;;;;;;;;x
-nieuwlander;Nieuwlander;;;;;;;;;;;;;x
+nieuwlander;Herladic;;;;;;;;;;;;;x
 north_italian;Cisalpine;;;;;;;;;x
 nyoro;Nyoro;;;;;;;;;;;;;x
 outremer;Outremer;;;;;;;;;;;;x
