--- a/SlayTA 4.6/localisation/HTA_decisions.csv
+++ b/SlayTA 4.6/localisation/HTA_decisions.csv
@@ -585,10 +585,10 @@ invade_the_mexicans_SCW_title;Conquer the southern menace!;;;;;;;;;;x
 invade_the_mexicans_SCW_title;We must kill the southern menace once and for all!;;;;;;;;;;x
 form_the_northeastern_union_title;Form the Great Northeastern Union!;;;;;;;;;;x
 form_the_northeastern_union_desc;I have no clue what to name this, the cultures have no overlap and I'm not going to name is something like Arcadia fuck you.;;;;;;;;;;x
-annex_quebec_title;Conquer Dabimon!;;;;;;;;;;x
-annex_quebec_desc;This is LITERALLY quebec and you can't tell me otherwise.;;;;;;;;;;x
-annex_new_holland_title;Conquer New Holland!;;;;;;;;;;x
-annex_new_holland_desc;How the hell do you spell the culture of this nation lmaoooo.;;;;;;;;;;x
+annex_quebec_title;Conquer Leifsland!;;;;;;;;;;x
+annex_quebec_desc;The tag is still QUE, but it is at least no longer quebec.;;;;;;;;;;x
+annex_new_holland_title;Conquer Heraldsland!;;;;;;;;;;x
+annex_new_holland_desc;Kill this MFer.;;;;;;;;;;x
 annex_vestland_title;Conquer Vestland!
 annex_vestland_desc;This is the basic bitch nation, kill it!;;;;;;;;;;x
 invade_the_southern_europeans_title;Conquer Mellomamerika!
