--- a/Changelog.txt
+++ b/Changelog.txt
@@ -26,6 +26,9 @@ Added province selector and added national ideas
 Added Rum formable for Armenia
 Japan gets largano accepted instead of cores of phillipines
 Got rid of laissez faire
+Changed NEU into an actual nation that has reason to exist
+Gave that one stupid looking province in mongolia to manchuria
+
 
 --------------------------------------------------------------------------------------
 4.5 THANKS TO ALL WHO REPORTED BUGS AND GENERALLY HELPED OUT WITH DECISION MAKING
