--- a/Changelog.txt
+++ b/Changelog.txt
@@ -15,7 +15,7 @@ made the scyargayar woning core decisions cost 15 infamy instead of 10 so it is 
 Pop buffed Hispania to 4 mil accepted (might be a bit much but would like they are still weaker than aqui day one and have other things to do)
 made bureaucrats cheaper to maintain (you're welcome)
 buffed armenia oob to balance it out more (in case there is no persia player or persia wants them dead)
-gave armenia the LITERAL worst army tech above Rome
+gave armenia an army tech above Rome
 gave argentina and uiscyr more fitting oobs (still largely under their forcelimit as to not have too much starting sieging power)
 gave scyargayar woning, melloamerika, and mexika all the same accepted pops (through decision)
 Gave hoyekistan/melloamerika afro-antillean accepted (same way as uiscyr) and made the land actually decent
@@ -24,7 +24,6 @@ Got rid of one of Qin's techs that they had previously
 Gave more generals to nations around the world
 Added province selector and added national ideas
 Added Rum formable for Armenia
-Japan gets largano accepted instead of cores of phillipines
 Got rid of laissez faire
 Changed NEU into an actual nation that has reason to exist
 Gave that one stupid looking province in mongolia to manchuria
