--- a/Changelog.txt
+++ b/Changelog.txt
@@ -27,6 +27,7 @@ Added Rum formable for Armenia
 Got rid of laissez faire
 Changed NEU into an actual nation that has reason to exist
 Gave that one stupid looking province in mongolia to manchuria
+added a SEEEECRET nation that makes unemployement extremely rare worldwide :)
 
 
 --------------------------------------------------------------------------------------
