--- a/SlayTA 4.6/localisation/000_Victoria Universalis CREDIT TO KEVING.csv
+++ b/SlayTA 4.6/localisation/000_Victoria Universalis CREDIT TO KEVING.csv
@@ -1530,3 +1530,6 @@ neoclassical_theory;4th National Idea;;;;;;;;;;;;;
 keynesian_economics;5th National Idea;;;;;;;;;;;;;
 province_attract_immigrants;Immigration Focus;;;;;;;;;;;;;x
 new_world_province_attract_immigrants;Immigration Focus;;;;;;;;;;;;;x
+bankers;Bankers;;;;;;;;;;;;;;x
+illuminati;Bankers;;;;;;;;;;;;;;;;;;;;;;;x
+JAN;World Bank;;;;;;;;;;;;;x
