--- a/Changelog.txt
+++ b/Changelog.txt
@@ -28,7 +28,7 @@ Got rid of laissez faire
 Changed NEU into an actual nation that has reason to exist
 Gave that one stupid looking province in mongolia to manchuria
 added a SEEEECRET nation that makes unemployement extremely rare worldwide :)
-
+made loans able 
 
 --------------------------------------------------------------------------------------
 4.5 THANKS TO ALL WHO REPORTED BUGS AND GENERALLY HELPED OUT WITH DECISION MAKING
