--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,8 +1,15 @@
 5.0
 Made Bankers not consume industrial goods (should result in less profit)
-
-
-
+Gave Aquitania Catalonia at the start instead of as a sphere (PLEASE use this land border wisely)
+Distributed Dutch soldier pops more evenly across the nation (east frisia no longer the most militarized place in the world lmao)
+Made Ruthenian go all the way to Kyiv
+Changed around states (mostly consilidation for Rome and South Africa)
+Added a research point on conquer nerf to Persia (will slow them down}
+Nilbog
+Illuminati
+got rid of that old day 1 event that gave goods and leadership (gave base generals to everyone)
+gave italy a decision to core Albania (also fixed their decisions)
+got rid of national ideas and lit campaigns
 
 ----------------------------------------------------------------------------------
 4.6
