--- a/SlayTA 5.0/localisation/HTA_cultures.csv
+++ b/SlayTA 5.0/localisation/HTA_cultures.csv
@@ -5,6 +5,7 @@ afro_platinean;Afro-Platinean;;;;;;;;;;;;;x
 afro_uilsc;Afro-Uilsc;;;;;;;;;;;;;x
 anatolian;Anatolian;;;;;;;;;;;;;;x
 albanian;Arben;;;;;;;;;;x
+malay;Indonesian;;;;;;;;;;x
 aquitanian;Aquitànian;;;;;;;;;;;;;x
 arabic;Arabic;;;;;;;;;;;;x
 aromanian;Aromanian;;;;;;;;;;;;;x
