--- a/SlayTA 5.0/localisation/HTA_provinces.csv
+++ b/SlayTA 5.0/localisation/HTA_provinces.csv
@@ -76,7 +76,7 @@ PROV74;Johansstad;;;;;;;;;;;;x
 PROV75;Walcheren;;;;;;;;;;;;x 
 PROV76;Coolsteerdt;;;;;;;;;;;;x
 PROV77;Tomioka;;;;;;;;;;;;x    
-PROV78;Rictelf;;;;;;;;;;;;x   
+PROV78;Nilbog;;;;;;;;;;;;x   
 PROV79;Norslisc;;;;;;;;;;;;x  
 PROV80;Soslisc;;;;;;;;;;;;x   
 PROV81;Tinuk;;;;;;;;;;;;x     
