--- a/SlayTA 5.0/localisation/00_HPM_Misc.csv
+++ b/SlayTA 5.0/localisation/00_HPM_Misc.csv
@@ -159,7 +159,7 @@ HAS_NO_NATIONAL_MINORITY;Has Minorities;;;;;;;;;;;;;;;;;;;;;;;;;;;x;;;;;;;;;;;;;
 HAS_NOT_NATIONAL_MINORITY;Has Minorities;;;;;;;;;;;;;;;;;;;;;;;;;;;x;;;;;;;;;;;;;x;;;;
 HAS_NATIONAL_MINORITY;Has Minorities;;;;;;;;;;;;;;;;;;;;;;;;;;;x;;;;;;;;;;;;;x;;;;
 beifaren;North Han;;;;;;;;;;;;;;;;;;;;;;;;;;;x;;;;;;;;;;;;;x;;;;
-nanfaren;South Han;;;;;;;;;;;;;;;;;;;;;;;;;;;x;;;;;;;;;;;;;x;;;;
+nanfaren;Han;;;;;;;;;;;;;;;;;;;;;;;;;;;x;;;;;;;;;;;;;x;;;;
 control_1;Obsolete Piston Steam Engine;;;;;;;;;;;;;;;;;;;;;;;;;;;x;;;;;;;;;;;;;x;;;;
 control_1_desc;Obsolescence is the state of being which occurs when an object, service, or practice is no longer wanted even though it may still be in good working order. It occurs that Piston Steam Engines have become rather obsolete and lost some of their advantages.;;;;;;;;;;;;;;;;;;;;;;;;;;;x;;;;;;;;;;;;;x;;;;
 control_2;Obsolete High-Pressure Steam Engine;;;;;;;;;;;;;;;;;;;;;;;;;;;x;;;;;;;;;;;;;x;;;;
