--- a/SlayTA 5.0/localisation/HTA_regions.csv
+++ b/SlayTA 5.0/localisation/HTA_regions.csv
@@ -268,13 +268,13 @@ JAP_1665;Shikoku;;;;;;;;;;;;x
 JAP_1660;Kyushu;;;;;;;;;;;;x       
 JAP_1672;Tohoku;;;;;;;;;;;;x       
 JAP_1675;Chubu;;;;;;;;;;;;x
-MOR_1693;Marrakesh;;;;;;;;;;;;x    
+MOR_1693;Morocco;;;;;;;;;;;;x    
 MOR_1694;Agadir;;;;;;;;;;;;x       
 ALD_1704;Oran;;;;;;;;;;;;x         
 ALD_1708;Constantine;;;;;;;;;;;;x
 ALD_1713;North Central Sahara;;;;;;;;;x
 CLM_1723;Panaben;;;;;;;;;;;x
-TRI_1731;Tripolitania;;;;;;;;;;;;x 
+TRI_1731;Libya;;;;;;;;;;;;x 
 TRI_1735;Cyrenaica;;;;;;;;;;;;x    
 TRI_1740;Fezzan;;;;;;;;;;;;x       
 EGY_1745;Cairo;;;;;;;;;;;;x        
