--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,33 +1,37 @@
 6.0
 IMPORTED SO MUCH FROM LOVESICK HTA, THANK YOU GODOG
 IMPORTS KEPT FROM LOVESICK-
-	-Helluland getting Margarian accepted
-	-Naples starts at war with Tripoli (Tunisia and libya states split)
-	-Straights that go form Italy to North Africa
-	-Bavaria starts with South German accepted (to make up for lack of Brunswick)
-	-The lit fixes for minorities that SHOULD be literate but weren't (I did remove the bad word though)
-	-The Anatolian Pop Boom is a decision that can be taken instead of an event
+	- Helluland getting Margarian accepted
+	- Naples starts at war with Tripoli (Tunisia and libya states split)
+	- Straights that go form Italy to North Africa
+	- Bavaria starts with South German accepted (to make up for lack of Brunswick)
+	- The lit fixes for minorities that SHOULD be literate but weren't (I did remove the bad word though)
+	- The Anatolian Pop Boom is a decision that can be taken instead of an event
 GENERAL GAME CHANGES--
-	-This mod DOES have tiered national focuses, but each tier only gives 1% extra promotion, and has heavily nerfed other types of national focuses
-	-Carved up the Slovenia state, giving Postojna to Friuli state and the other two provinces to Old Croatia
-	-Gave Senj and Karlovac from Old Croatia to Dalmatia
-	-Merged Arabian states into one
-	-Added a decision for Zachadia, Italy, Rome, and Rum for if they own all Serbian, Croatian, Solvene, and Montenegren cores they raise the liferating by 5, setting it to 40
-	-Added a STATUE OF LIBERTY to the new world, can be constructed for 500K, and can be stolen via a CB that costs 24 warscore
-	-Imported ship costs from IgoR_PRF (makes ships a tad more expensive goods wise, some steamers cost coal and/or canned goods)
+	- This mod DOES have tiered national focuses, but each tier only gives 1% extra promotion, and has heavily nerfed other types of national focuses
+	- Carved up the Slovenia state, giving Postojna to Friuli state and the other two provinces to Old Croatia
+	- Gave Senj and Karlovac from Old Croatia to Dalmatia
+	- Merged Arabian states into one
+	- Added a decision for Zachadia, Italy, Rome, and Rum for if they own all Serbian, Croatian, Solvene, and Montenegren cores they raise the liferating by 5, setting it to 40
+	- Added a STATUE OF LIBERTY to the new world, can be constructed for 500K, and can be stolen via a CB that costs 24 warscore
+	- Imported ship costs from IgoR_PRF (makes ships a tad more expensive goods wise, some steamers cost coal and/or canned goods)
+	- Buffed Diplomacy National Value (now gives -0.15 infamy decay instead of -0.05 like it was before)
+	- Buffed normal peace time infamy decay from 0.1 to 0.15 (wartime infamy decay still at -0.1)
+	- Nerfed the early game infamy decay from a scaling -0.1 to -0.15 depending on gp status to just a flat -0.1
+	- REMOVED THE PROVINCE SELECTOR
 
 FRANCE/NETHERLANDS CHANGES-
 	- The Netherlands no longer owns East Frisia and Bremen, split up between Brandenburg and Oldenburg
 	- Changed around Dutch soldier pops to compensate (they start 15/36 brigades)
 	- Released Bar-Lorraine and Normandy from France (around 1.2 mil pops France has to retake, they have cores on Normandy only)
 		-Getting cores on Brittany now requires Normandy
-	-If France/Netherlands owns all of the cores of both the nations, they get a 2 LR buff in all their lands
-	-Gave Chalons province to Wallonia, and gave Challan to France (taken from Aquitania, sorry buddy)
+	- If France/Netherlands owns all of the cores of both the nations, they get a 2 LR buff in all their lands
+	- Gave Chalons province to Wallonia, and gave Challan to France (taken from Aquitania, sorry buddy)
 HISPANIA CHANGES- 
 	- Released Aragon and Valencia from Hispania (about 1.1 mil pop decrease)
 	- Hispania no longer gets Catalan accepted, but they still have basque
-		-To make it still reasonable to go FOR catalonia, there is now a significant minority of Spanish people in both Aragon and Valencia (about 1/3rd Spanish overall)
-		-Also moved both the Barcelona and Toledo iron mines to Zaragoza and Valencia
+		- To make it still reasonable to go FOR catalonia, there is now a significant minority of Spanish people in both Aragon and Valencia (about 1/3rd Spanish overall)
+		- Also moved both the Barcelona and Toledo iron mines to Zaragoza and Valencia
 	- Hispania NO LONGER gets Sicilian accepted and cored (be a good friend!)
 	
 	
@@ -39,28 +43,28 @@ GERMANY CHANGES-
 		-Bavaria starts with 2 mil accepted, BB starts with 1.3 mil, but has more to expand into
 		-
 ITALY CHANGES-
-	-Padan is kill, exploded into a ton of AI
-	-Italy now gets Greek accepted (import from Lovesick)
-	-Naples now gets cores on Venice on forming Italy
+	- Padan is kill, exploded into a ton of AI
+	- Italy now gets Greek accepted (import from Lovesick)
+	- Naples now gets cores on Venice on forming Italy
 	
 MISC EUROPE CHANGES-
-	-Merged czech and slovak cultures (doesn't change anything unless for some unknown reason you roster an ardeal)
-	-Buff Finnish literacy (60% -> 70%)
-	-Expanded Prusai culture by merging it with Lithuanian, Lithuania is now Prusova
+	- Merged czech and slovak cultures (doesn't change anything unless for some unknown reason you roster an ardeal)
+	- Buff Finnish literacy (60% -> 70%)
+	- Expanded Prusai culture by merging it with Lithuanian, Lithuania is now Prusova
 	-
 PERSIA CHANGES-
-	-Persia now starts civilized, this is by all means a nerf, but it doesn't change much
-	-Persia no longer gets kurdish accepted
-	-Syria is now a puppet that owns both Syria the state and part of the palestine state, it also starts civilized and has no tech
-	-Persia accepts both mashriqi and bedouin IF Rum forms and they have all syrian cores in 1855
-	-Persia will automatically inherit syria if Rum forms or in 1845
-	-Split Syria and Iraq into 2 states each, both having one medium and one small state
-	-Gave Arabian Palestine state to Syrian puppet (they start at 1 mil pops)
-	-Split Arabia state in 2 (not nearly as crazy as it used to be)
+	- Persia now starts civilized, this is by all means a nerf, but it doesn't change much
+	- Persia no longer gets kurdish accepted
+	- Syria is now a puppet that owns both Syria the state and part of the palestine state, it also starts civilized and has no tech
+	- Persia accepts both mashriqi and bedouin IF Rum forms and they have all syrian cores in 1855
+	- Persia will automatically inherit syria if Rum forms or in 1845
+	- Split Syria and Iraq into 2 states each, both having one medium and one small state
+	- Gave Arabian Palestine state to Syrian puppet (they start at 1 mil pops)
+	- Split Arabia state in 2 (not nearly as crazy as it used to be)
 JAPAN CHANGES-
-	-Japan now starts civilized
-	-Japan now starts with almost no technology 
-	-Korea actually starts civ too (nerfed its lit to be only a little better than Japan's)
+	- Japan now starts civilized
+	- Japan now starts with almost no technology 
+	- Korea actually starts civ too (nerfed its lit to be only a little better than Japan's)
 ------------------------------------------------------------------------------------
 
 5.0
