--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,5 +1,5 @@
 6.1
-Bug fixes (removed armenian cores in Thrace, and fixed syrian annexation
+Bug fixes (removed armenian cores in Thrace, and fixed syrian annexation, and others
 Removed Bedouin accepted from the Accept the Mashriqi decision for Persia 
 ----------------------------------
 6.0
