--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,6 +1,7 @@
 6.1
 Bug fixes (removed armenian cores in Thrace, and fixed syrian annexation, and others
 Removed Bedouin accepted from the Accept the Mashriqi decision for Persia 
+Removed Army professionalism from all nations that had it, too big of an early boost (forgot to do it earlier for german nations and france, but did for aqua lmao)
 ----------------------------------
 6.0
 IMPORTED SO MUCH FROM LOVESICK HTA, THANK YOU GODOG
