--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,5 +1,6 @@
 6.2
 More bug fixes, localization fixes, again nothing major 
+Changed all Chinese Treaty ports to gold, removed a lot of the gold from Africa and India to make up for it
 6.1
 Bug fixes (removed armenian cores in Thrace, and fixed syrian annexation, and others
 Removed Bedouin accepted from the Accept the Mashriqi decision for Persia 
